--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission
-        android:name="android.permission.INTERNET" />
-    <uses-permission
-        android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -23,77 +20,75 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RConnectFE"
         tools:targetApi="31">
-
         <activity
-            android:name=".dashboard.Dashboard.DashboardActivity"
-            android:screenOrientation="landscape"
-            android:exported="true" >
+            android:name=".dashboard.configuration.ConfigurationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".dashboard.DashboardActivity"
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="landscape"
-            android:exported="true" /> <!-- Authentication Activities -->
+            android:exported="true"
+            android:screenOrientation="landscape" /> <!-- Authentication Activities -->
         <activity
             android:name=".onboarding.authentication.LoginScreen"
-            android:screenOrientation="landscape"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".onboarding.authentication.SignUpScreen"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".onboarding.authentication.ForgetPasswordScreen"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".onboarding.authentication.EnterVerificationCodeActivity"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".onboarding.authentication.CreateNewPasswordActivity"
-            android:screenOrientation="landscape"
-            android:exported="true" />
-
-        <!-- Onboarding Activities -->
+            android:exported="true"
+            android:screenOrientation="landscape" /> <!-- Onboarding Activities -->
         <activity
             android:name=".onboarding.FirstOnBoardingScreen"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".onboarding.singleHotelOnboarding.SecondOnboardingScreen"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".onboarding.singleHotelOnboarding.ThirdOnboardingActivity"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".onboarding.singleHotelOnboarding.FourOnboardingActivity"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".onboarding.chainHotelOnboarding.SecondChainOnboardingActivity"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".onboarding.chainHotelOnboarding.ThirdChainOnboardingScreen"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".onboarding.FinalOnboardingScreen"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
