--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RConnectFE"
         tools:targetApi="31">
-        <activity
-            android:name=".dashboard.configuration.ConfigurationActivity"
-            android:exported="false" />
+
         <activity
             android:name=".dashboard.DashboardActivity"
             android:exported="true"
@@ -31,7 +29,10 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="landscape" /> <!-- Authentication Activities -->
+            android:screenOrientation="landscape" />
+
+        <!-- Authentication Activities -->
+
         <activity
             android:name=".onboarding.authentication.LoginScreen"
             android:exported="true"
