--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -23,19 +22,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RConnectFE"
         tools:targetApi="31">
-
+        <activity
+            android:name=".WelcomeMobileScreenActivity"
+            android:exported="false" />
         <activity
             android:name=".dashboard.DashboardActivity"
             android:exported="true"
-            android:screenOrientation="landscape">
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="landscape" />
-
-        <!-- Authentication Activities -->
-
+            android:screenOrientation="landscape" /> <!-- Authentication Activities -->
         <activity
             android:name=".onboarding.authentication.LoginScreen"
             android:exported="true"
@@ -46,7 +43,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".onboarding.authentication.ForgetPasswordScreen"
             android:exported="true"
