--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,20 +21,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RConnectFE"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".WelcomeMobileScreenActivity"
-            android:exported="false" />
-        <activity
-            android:name=".dashboard.DashboardActivity"
-            android:exported="true"
-            android:screenOrientation="landscape"></activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:screenOrientation="landscape" /> <!-- Authentication Activities -->
-        <activity
-            android:name=".onboarding.authentication.LoginScreen"
+            android:name=".SplashScreen"
             android:exported="true"
             android:screenOrientation="landscape">
             <intent-filter>
@@ -43,6 +33,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".WelcomeMobileScreenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".dashboard.DashboardActivity"
+            android:exported="true"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="landscape" /> <!-- Authentication Activities -->
+        <activity
+            android:name=".onboarding.authentication.LoginScreen"
+            android:exported="true"
+            android:screenOrientation="landscape"/>
         <activity
             android:name=".onboarding.authentication.ForgetPasswordScreen"
             android:exported="true"
